[package]
name = "hltv"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An API to fetch and parse data from HLTV.org"
homepage = "https://github.com/m2q/hltv-rust"
repository = "https://github.com/m2q/hltv-rust"
documentation = "https://github.com/m2q/hltv-rust"
readme = "README.md"
keywords = ["hltv", "csgo", "api", "esports"]
categories = ["api-bindings"]

[dependencies]
