[package]
name = "hltv"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A client to fetch and parse data from HLTV.org"
homepage = "https://github.com/m2q/hltv-rust"
repository = "https://github.com/m2q/hltv-rust"
documentation = "https://github.com/m2q/hltv-rust"
readme = "README.md"
keywords = ["hltv", "csgo", "api", "esports"]
categories = ["api-bindings"]

[dependencies]
attohttpc = "0.18"
chrono = "0.4"
tl = "0.5"
