[package]
name = "hltv"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A client to fetch and parse data from HLTV.org"
homepage = "https://github.com/dist1ll/hltv-rust"
repository = "https://github.com/dist1ll/hltv-rust"
documentation = "https://docs.rs/hltv/latest/hltv/"
readme = "README.md"
keywords = ["hltv", "csgo", "api", "esports"]
categories = ["api-bindings"]

[lib]
doctest = false

[dependencies]
reqwest = "0.11.9"
chrono = "0.4.19"
tl = "0.6.0"

[dev-dependencies]
tokio = { version = "1.16.1", features = ["macros"] }
